[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gguf_llm_library"
version = "0.1.0"
description = "Provides simple LLM calls."
authors = [{name = "Taylor-eOS"}]
requires-python = ">=3.8"
dependencies = [
    "setuptools",
    "wheel",
    "llama-cpp-python",
    "huggingface-hub",
]
